fix constrained-optimization for Z,Y switch

--- a/two-groups.tex
+++ b/two-groups.tex
@@ -200,12 +200,12 @@ Backward induction (legislature moves last; B makes last bribe; A makes first br
 		\end{itemize}
 	\item Vote Buyer A
 		\begin{itemize}
-			\item Vote buyer A's objective function is identical in form to that of Vote Buyer B (Expression~\ref{eq:objb} 
+			\item Vote buyer A's objective function is identical in form to that of Vote buyer B (Expression~\ref{eq:objb}) 
 			  \begin{multline}
 			    \max_{a\left(-\frac{1}{2}\right), a\left(0\right), a\left(\frac{1}{2}\right)} 
-					W_A \biggl[ \frac{1}{1+e^{-X_A}} \frac{1}{1+e^{-Y}} +
-					\frac{1}{1+e^{-X}} \frac{1}{1+e^{-Z}} + \\
-					\frac{1}{1+e^{-Y}} \frac{1}{1+e^{-Z}} - 2	\frac{1}{1+e^{-Z}} \frac{1}{1+e^{-X}} \frac{1}{1+e^{-Y}} \biggr] - \sum_{j\in \left\{-\frac{1}{2}, 0,\frac{1}{2}\right\}} a(j)
+					W_A \biggl[ \frac{1}{1+e^{-X_A}} \frac{1}{1+e^{-Y_A}} +
+					\frac{1}{1+e^{-X_A}} \frac{1}{1+e^{-Z_A}} + \\
+					\frac{1}{1+e^{-Y_A}} \frac{1}{1+e^{-Z_A}} - 2	\frac{1}{1+e^{-Z_A}} \frac{1}{1+e^{-X_A}} \frac{1}{1+e^{-Y_A}} \biggr] - \sum_{j\in \left\{-\frac{1}{2}, 0,\frac{1}{2}\right\}} a(j)
 					\label{eq:obja}
 				\end{multline}
 				where 
