add text from NSF to intro of draft

--- a/draft.tex
+++ b/draft.tex
@@ -20,7 +20,7 @@ bookmarksopen=true]{hyperref}
 \usepackage[pdftex]{graphicx}
 %\usepackage{pdfpages}
 
-%\usepackage[usenames,dvipsnames]{color}
+\usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 \usepackage{cite}
 \usepackage{times, verbatim,bm,pifont,pdfsync}
 %\usepackage[hang,flushmargin]{footmisc}%unindents footnotes
@@ -72,8 +72,20 @@ bookmarksopen=true]{hyperref}
 \section{Introduction}
 \label{sec:intro}
 
+\textcolor{blue}{In democratic countries, legislatures are the authoritative source of statutory law. The PFS model doesn't capture several general features of policymaking in this environment: (2) how uncertainty affects the incentives for lobbying and the associated prospects for ratification of trade agreements; and (3) how the voting intentions of multiple legislators, rather than a single agent, change in response to incentives.}
+
+\textcolor{blue}{In this vein, Saiegh (2011) identifies two major factors that shape lawmaking: the unpredictability of legislators' voting behavior, and whether buying legislative votes is a feasible option. The source of the uncertainty is the existence of cross-pressured legislators: in deciding how to vote, lawmakers consider a variety of influences, including their personal values, announced positions, the views of their constituents, and the preferences of their party leadership. Therefore, legislators' voting behavior can seldom be perfectly anticipated.}
+
+\textcolor{blue}{From an empirical standpoint, the project will contribute to our understanding of the political uncertainty that surrounds statutory lawmaking. We will introduce an innovative methodology for quantifying cross-industry political uncertainty, establish the relevance of the resulting measures for policy-making and make the data available for future use in a wide range of applications. For example, our measure could be used to study he impact of policy uncertainty on firm-level investment and employment.}
+
 \subsection{Related Literature}
 \label{sec:lit}
+
+\textcolor{blue}{Related is Le Breton and Salanie (2003), which studies lobbying when the lobby is uncertain about the preferences of a unitary decision maker. Le Breton and Zaporozhets (2007) go a step further and replace the unitary decision maker with a legislature with multiple actors. Song (2008) is a model of endogenous lobbying with a ratification constraint in a context of unilateral policy making with no uncertainty, and Coates and Ludema (2001) study trade policy leadership in a model with endogenous lobbying in the presence of political uncertainty with imperfect monitoring.}
+
+\textcolor{blue}{As noted above, Saiegh (2009) argues that the uncertainty surrounding statutory lawmaking is in part related to governmental and political structure. Although they do not discuss uncertainty specifically, the cross-country empirical work of Gawande, Krishna and Olarreaga (2009) is the first to our knowledge that suggests that this kind of uncertainty plays a role in trade policy. They show that variables such as the number of checks and balances on the power of the legislature and the gap between the policy positions of the main political parties have predictive power for the PFS ``welfare-mindedness'' parameter. One of the objectives of this proposed project is to directly test the premise that legislative uncertainty indeed has an important impact on trade policy.}
+			
+\textcolor{blue}{This work also relates to the canonical studies on endogenous regulation (cf. Stigler (1975), Peltzman (1976), Becker (1983), Laffont and Tirole (1994)), as well as the literature on vote-buying and legislative behavior in political science (Groseclose and Snyder (1996), Dekel et. al. (2005), Dal Bo (2007)).}
 
 %I will begin by ... Section~\ref{sec:main} then ... In Section~ \ref{sec:example}, ... Section~\ref{sec:dis} explores .... Several extensions of the model are explored in Section~\ref{sec:ext} and Section~\ref{sec:concl} concludes.
 
